fix alignment of well 1 and 2

--- a/css/style.css
+++ b/css/style.css
@@ -18,16 +18,17 @@ h2, h3, h4, h5, h6 {
   top:-15px;
 }*/
 
-#text2, #text3, #row2, #text4, #text5, #target5, #text6, #target6,
+#text2, #text3, #text4, #text5, #target5, #text6, #target6,
 #target7, #target8, #text7, #text8, #row3, #row4, #row5, #row6, #row7, #row8, #answer1, #answer2, #answer3,
 .realgamebtn, #text9, #text10, #button12, #button13, #button14,
-#danger1, #danger2, #danger3, #danger4, #danger5, /** Uncomment after this for game 2 **/ #well6, #well7, #well8, .arrows {
+#danger1, #danger2, #danger3, #danger4, #danger5, #well5, #hingegamebutton, /** Uncomment after this for game 2 **/ #well6, #well7, #well8, .arrows {
   display:none;
 }
 
 #smallDemonImg {
   max-width:400px;
 }
+
 
 #well5 {
   background:white;
@@ -211,4 +212,6 @@ h4 {
 
 @media screen and (min-width:1277px) {
   #well4 {min-height:500px;}
+}
+
 }
